--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,13 @@ body {
   background-attachment: fixed;
 }
 
+.arrow-down {
+  height: 100px !important;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .font {
   font-family: "Major Mono Display", monospace;
 }
@@ -113,7 +120,6 @@ footer a {
 }
 .skills {
   display: flex;
-  height: 50vh;
   flex-flow: column;
 }
 
@@ -121,6 +127,9 @@ footer a {
   font-family: "Major Mono Display", monospace;
 }
 #skills {
+  display: flex;
+}
+#intro {
   display: flex;
 }
 
@@ -132,7 +141,7 @@ footer a {
     flex-flow: column;
     align-items: center;
   }
-  #intro div {
+  #intro > div {
     display: flex;
     align-items: center;
     height: 50vh;
